--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -89,7 +89,7 @@ redirect_from:
         <div class="section-date">July 2023</div>
         <div class="divider"></div>
 
-        <p>1.Nanjing University Cloud scientific examination project on artificial intelligence technology application driven by both Chinese and British data knowledge</p>
+        <p>1.<b>Nanjing University</b> Cloud scientific examination project on artificial intelligence technology application driven by both Chinese and British data knowledge</p>
 		<div class="image-grid">
             <div class="grid-item"><img src="../images/travel/nju1.jpg" alt="nju 1"></div>
             <div class="grid-item"><img src="../images/travel/nju2.jpg" alt="nju 2"></div>
@@ -108,6 +108,11 @@ redirect_from:
             <div class="grid-item"><img src="../images/travel/fd1.jpg" alt="fd 1"></div>
             <div class="grid-item"><img src="../images/travel/fd2.jpg" alt="fd 2"></div>
 			<div class="grid-item"><img src="../images/travel/fd3.jpg" alt="fd 3"></div>
+        </div>
+		<div class="image-grid">
+            <div class="grid-item"><img src="../images/travel/shanghai1.jpg" alt="shanghai 1"></div>
+            <div class="grid-item"><img src="../images/travel/shanghai2.jpg" alt="shanghai 2"></div>
+			<div class="grid-item"><img src="../images/travel/shanghai3.jpg" alt="shanghai 3"></div>
         </div>
     </div>
 </div>
