--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -9,6 +9,12 @@ redirect_from:
 
 <div class="travel-content">
     <div class="travel-section">
+        <div class="section-title">2024 Winter Vacation</div>
+		<div class="section-date">December-January 2025</div>
+        <div class="divider"></div>
+        <p>1.Beijing (meet with my friends)</p>
+
+
         <div class="section-title">2024 Summer Vacation</div>
 		<div class="section-date">June-August 2024</div>
         <div class="divider"></div>
@@ -53,7 +59,7 @@ redirect_from:
         </div>
 
 
-        <div class="section-title">2024 Winter Vacation</div>
+        <div class="section-title">2023 Winter Vacation</div>
         <div class="section-date">January 2024</div>
         <div class="divider"></div>
         <p>1.Sichuan</p>
